[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/Enemies/Humans/HumanShooter.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Humans/Bullets/HumanShooterBlast.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/Human Shooter/badguy-1.png" type="Texture" id=3]
[ext_resource path="res://Entities/Enemies/Humans/HumanDeathParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Effects/ball - orange.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/HumanShooter/shooterAttack1.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/HumanShooter/shooterDeath.wav" type="AudioStream" id=7]
[ext_resource path="res://Entities/Shared/Behaviors/FlashOnHurt.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.7511, 17.7251 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6153, 10 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.883806, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 20, 10, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 1.4013e-45
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
scale_curve = SubResource( 5 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00250607, 0.9988 ), 0.0, 0.0, 0, 0, Vector2( 0.514214, 0.00767672 ), 0.0, 0.0, 0, 0 ]

[node name="HumanShooter" type="KinematicBody2D"]
scale = Vector2( 1, 1.05 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )
MainBlast = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Base" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Tip" type="CollisionShape2D" parent="."]
position = Vector2( 0, 19 )
shape = SubResource( 2 )

[node name="GunMain" type="Node2D" parent="."]
position = Vector2( 0, 8 )
rotation = 3.14159
z_index = 50

[node name="DeathNodes" type="Node2D" parent="."]

[node name="HumanDeathParticles" parent="DeathNodes" instance=ExtResource( 4 )]
amount = 6
process_material = SubResource( 6 )

[node name="DeathParticles" type="CPUParticles2D" parent="DeathNodes"]
visible = false
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 26, 18 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
damping = 10.0
scale_amount_curve = SubResource( 3 )

[node name="WaitAfterDeath" type="Timer" parent="DeathNodes"]
one_shot = true

[node name="Timers" type="Node" parent="."]

[node name="Wait" type="Timer" parent="Timers"]
one_shot = true

[node name="WaitAfterShoot" type="Timer" parent="Timers"]
one_shot = true

[node name="FireStutter" type="Timer" parent="Timers"]
one_shot = true

[node name="Sounds" type="Node2D" parent="."]
editor/display_folded = true

[node name="ShootOne" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="Death" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="FlashOnHurt" parent="." instance=ExtResource( 8 )]

[connection signal="timeout" from="DeathNodes/WaitAfterDeath" to="." method="_on_WaitAfterDeath_timeout"]
[connection signal="timeout" from="Timers/Wait" to="." method="_on_Wait_timeout"]
[connection signal="timeout" from="Timers/WaitAfterShoot" to="." method="_on_WaitAfterShoot_timeout"]
[connection signal="timeout" from="Timers/FireStutter" to="." method="_on_FireStutter_timeout"]
